Remove daemon service and merge ingest pipeline into mynah_agent

--- a/compute/ui/mynah_ui/app/templates/index.html
+++ b/compute/ui/mynah_ui/app/templates/index.html
@@ -57,14 +57,9 @@
       <section class="panel">
         <h2>Runtime Health</h2>
         <p>
-          Daemon:
-          <span class="state-{{ daemon_state }}">{{ daemon_state }}</span>
-          (<code>{{ daemon_detail }}</code>)
-        </p>
-        <p>
-          Agent:
-          <span class="state-{{ agent_state }}">{{ agent_state }}</span>
-          (<code>{{ agent_detail }}</code>)
+          Pipeline Service:
+          <span class="state-{{ pipeline_state }}">{{ pipeline_state }}</span>
+          (<code>{{ pipeline_detail }}</code>)
         </p>
       </section>
 
