Streamline runtime: single-source schema, lean tests, and split readiness

--- a/compute/ui/mynah_ui/app/templates/index.html
+++ b/compute/ui/mynah_ui/app/templates/index.html
@@ -61,6 +61,11 @@
           <span class="state-{{ pipeline_state }}">{{ pipeline_state }}</span>
           (<code>{{ pipeline_detail }}</code>)
         </p>
+        <p>
+          Local Models:
+          <span class="state-{{ model_state }}">{{ model_state }}</span>
+          (<code>{{ model_detail }}</code>)
+        </p>
       </section>
 
       <section class="panel">
